--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.administrator.sampledemo.MainActivity">
 
-    <com.lucenlee.library.RectPasswordText
+    <Button
+        android:id="@+id/activity_main_btn_rect_password"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:textSize="16sp"
-        app:prt_length="8"
-        app:prt_rectangle_color_focus="#F00"
-        app:prt_proclaimed_show="false"
-        app:prt_margin="10dp" />
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="密码或者验证码输入" />
+    <Button
+        android:id="@+id/activity_main_btn_line_view"
+        android:layout_width="match_parent"
+        android:onClick="onClick"
+        android:layout_height="wrap_content"
+        android:text="分割线使用" />
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
